@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 0.06
 
+- Added support for listing all system crontabs.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
